docs: shade 3.x bump is proactive; record allocator-backend trade-off
Per user approval, bumping maven-shade-plugin to 3.x moves from fallback to
a planned PR-1 step (Arrow 18.x ships module-info.class and multi-release
sections that 2.4.1 predates). Also record why arrow-memory-netty is a
near-zero-cost fallback for arrow-memory-unsafe: both are fully off-heap
(no GC pressure), per-allocation overhead is irrelevant to the
reuse-heavy write pattern, but it does not remove the --add-opens
requirement and must never share the classpath with -unsafe.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013jVS18MRgSdf7X9JcHSqsh